--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Meraj Mammadov — PhD student and WASP 
-    fellow at Örebro University. Research and personal projects in imitation 
-    learning and sequential decision making." />
+    <meta name="description" content="Meraj Mammadov - PhD student in computer 
+    science and WASP fellow at Örebro University." />
+    <meta property="og:title" content="Meraj Mammadov" />
+    <meta property="og:description" content="Meraj Mammadov - PhD student in computer 
+    science and WASP fellow at Örebro University." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://meraccos.com/" />
+    <meta property="og:image" content="https://meraccos.com/img/image.jpeg" />
+    <meta property="og:site_name" content="Meraj Mammadov" />
     <title>Meraj Mammadov</title>
     <link rel="favicon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/css/skeleton.css" />
@@ -43,15 +49,15 @@
         <div class="dropdown desktop">
           <button onclick="ProjectsMenuFunction()" class="dropbtn" id="dropbtn">projects</button>
           <div id="myDropdown" class="dropdown-content">
-            <a href="/merajpt/index.html">merajpt</a>
-            <a href="/movie/index.html">movie</a>
-            <a href="/sdr/index.html">sdr</a>
-            <a href="/hangman/index.html">hangman</a>
+            <a href="/merajpt/">merajpt</a>
+            <a href="/movie/">movie</a>
+            <a href="/sdr/">sdr</a>
+            <a href="/hangman/">hangman</a>
           </div>
         </div>
 
-        <a href="/enigma/index.html" class="desktop">enigma</a>
-        <a href="/contact/index.html" class="desktop">contact</a>
+        <a href="/enigma/" class="desktop">enigma</a>
+        <a href="/contact/" class="desktop">contact</a>
 
         <strong id="mobile-menu-btn" class="menu-button mobile">
           <div class="line" style="width: 30px;"></div>
@@ -68,12 +74,12 @@
       <div class="mobile-menu" style="display: none;">
         <a href="/" class="mobile">home</a>
         <a href="/Meraj_cv.pdf" class="mobile">cv</a>
-        <a href="/merajpt/index.html" class="mobile">merajpt</a>
-        <a href="/movie/index.html" class="mobile">movie</a>
-        <a href="/sdr/index.html" class="mobile">sdr</a>
-        <a href="/hangman/index.html">hangman</a>
-        <a href="/enigma/index.html" class="mobile">enigma</a>
-        <a href="/contact/index.html" class="mobile">contact</a>
+        <a href="/merajpt/" class="mobile">merajpt</a>
+        <a href="/movie/" class="mobile">movie</a>
+        <a href="/sdr/" class="mobile">sdr</a>
+        <a href="/hangman/">hangman</a>
+        <a href="/enigma/" class="mobile">enigma</a>
+        <a href="/contact/" class="mobile">contact</a>
       </div>
     </header>
 
