--- a/hangman/index.html
+++ b/hangman/index.html
@@ -15,6 +15,13 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="A simple information-theoretic hangman game." />
+  <meta property="og:title" content="Hangman | Meraj Mammadov" />
+  <meta property="og:description" content="A simple information-theoretic hangman game." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://meraccos.com/hangman/" />
+  <meta property="og:image" content="https://meraccos.com/img/image.jpeg" />
+  <meta property="og:site_name" content="Meraj Mammadov" />
   <title>Hangman</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="favicon" type="image/x-icon" href="/favicon.ico" />
@@ -36,15 +43,15 @@
         <div class="dropdown desktop">
           <button onclick="ProjectsMenuFunction()" class="dropbtn" id="dropbtn">projects</button>
           <div id="myDropdown" class="dropdown-content">
-            <a href="/merajpt/index.html">merajpt</a>
-            <a href="/movie/index.html">movie</a>
-            <a href="/sdr/index.html">sdr</a>
-            <a href="/hangman/index.html">hangman</a>
+            <a href="/merajpt/">merajpt</a>
+            <a href="/movie/">movie</a>
+            <a href="/sdr/">sdr</a>
+            <a href="/hangman/">hangman</a>
           </div>
         </div>
 
-        <a href="/enigma/index.html" class="desktop">enigma</a>
-        <a href="/contact/index.html" class="desktop">contact</a>
+        <a href="/enigma/" class="desktop">enigma</a>
+        <a href="/contact/" class="desktop">contact</a>
 
         <strong id="mobile-menu-btn" class="menu-button mobile">
           <div class="line" style="width: 30px;"></div>
@@ -61,12 +68,12 @@
       <div class="mobile-menu" style="display: none;">
         <a href="/" class="mobile">home</a>
         <a href="/Meraj_cv.pdf" class="mobile">cv</a>
-        <a href="/merajpt/index.html" class="mobile">merajpt</a>
-        <a href="/movie/index.html" class="mobile">movie</a>
-        <a href="/sdr/index.html" class="mobile">sdr</a>
-        <a href="/hangman/index.html">hangman</a>
-        <a href="/enigma/index.html" class="mobile">enigma</a>
-        <a href="/contact/index.html" class="mobile">contact</a>
+        <a href="/merajpt/" class="mobile">merajpt</a>
+        <a href="/movie/" class="mobile">movie</a>
+        <a href="/sdr/" class="mobile">sdr</a>
+        <a href="/hangman/">hangman</a>
+        <a href="/enigma/" class="mobile">enigma</a>
+        <a href="/contact/" class="mobile">contact</a>
       </div>
     </header>
 
