--- a/sdr/index.html
+++ b/sdr/index.html
@@ -17,6 +17,13 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Satellite image retrieval with RTL-SDR." />
+    <meta property="og:title" content="RTL-SDR | Meraj Mammadov" />
+    <meta property="og:description" content="Satellite image retrieval with RTL-SDR." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://meraccos.com/sdr/" />
+    <meta property="og:image" content="https://meraccos.com/img/image.jpeg" />
+    <meta property="og:site_name" content="Meraj Mammadov" />
     <title>SDR</title>
     <link rel="favicon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/css/skeleton.css" />
@@ -32,24 +39,24 @@
 
   <body>
     <header>
-      <h1><a href="/index.html">Meraj Mammadov</a></h1>
+      <h1><a href="/">Meraj Mammadov</a></h1>
       <nav class="nav">
 
-        <a href="/index.html" class="desktop">home</a>
+        <a href="/" class="desktop">home</a>
         <a href="/Meraj_cv.pdf" class="desktop">cv</a>
 
         <div class="dropdown desktop">
           <button onclick="ProjectsMenuFunction()" class="dropbtn" id="dropbtn">projects</button>
           <div id="myDropdown" class="dropdown-content">
-            <a href="/merajpt/index.html">merajpt</a>
-            <a href="/movie/index.html">movie</a>
-            <a href="/sdr/index.html">sdr</a>
-            <a href="/hangman/index.html">hangman</a>
+            <a href="/merajpt/">merajpt</a>
+            <a href="/movie/">movie</a>
+            <a href="/sdr/">sdr</a>
+            <a href="/hangman/">hangman</a>
           </div>
         </div>
 
-        <a href="/enigma/index.html" class="desktop">enigma</a>
-        <a href="/contact/index.html" class="desktop">contact</a>
+        <a href="/enigma/" class="desktop">enigma</a>
+        <a href="/contact/" class="desktop">contact</a>
 
         <strong id="mobile-menu-btn" class="menu-button mobile">
           <div class="line" style="width: 30px;"></div>
@@ -64,14 +71,14 @@
       </nav>
 
       <div class="mobile-menu" style="display: none;">
-        <a href="/index.html" class="mobile">home</a>
+        <a href="/" class="mobile">home</a>
         <a href="/Meraj_cv.pdf" class="mobile">cv</a>
-        <a href="/merajpt/index.html" class="mobile">merajpt</a>
-        <a href="/movie/index.html" class="mobile">movie</a>
-        <a href="/sdr/index.html" class="mobile">sdr</a>
-        <a href="/hangman/index.html">hangman</a>
-        <a href="/enigma/index.html" class="mobile">enigma</a>
-        <a href="/contact/index.html" class="mobile">contact</a>
+        <a href="/merajpt/" class="mobile">merajpt</a>
+        <a href="/movie/" class="mobile">movie</a>
+        <a href="/sdr/" class="mobile">sdr</a>
+        <a href="/hangman/">hangman</a>
+        <a href="/enigma/" class="mobile">enigma</a>
+        <a href="/contact/" class="mobile">contact</a>
       </div>
     </header>
 
