added a new problem

--- a/enigma/index.html
+++ b/enigma/index.html
@@ -111,7 +111,8 @@
       </li>
       <br />
       <li>
-        Find a method to generate unbiased random bits (\(0\)s and \(1\)s) using a biased coin with unknown probability \(p\).
+        Find a method to generate unbiased random bits (\(0\)s and \(1\)s) using 
+        a biased coin with unknown probability \(p\).
       </li>
       <br />
       <li>
@@ -119,12 +120,20 @@
       </li>
       <br />        
       <li>
-        Find the optimal shape of a planet that maximizes the gravitational force at a given point on its surface.
+        Find the optimal shape of a planet that maximizes the gravitational force 
+        at a given point on its surface.
+      </li>
+      <br />
+      <li>
+        A uniform rope of length \(l\) hangs between two walls separated by \(L\), 
+        with the right end \(d\) higher than the left. Find its shape and the 
+        position of the lowest point.
       </li>
       <br />
       <li>
         A ballistic missile is launched from the north pole, the target is at
-        the latitude \(\phi\). Find the required launch angle (with respect to the horizon) to have the minimal launch velocity. \(^2\)
+        the latitude \(\phi\). Find the required launch angle (with respect to 
+        the horizon) to have the minimal launch velocity. \(^2\)
       </li>
       <br />
       <li>
@@ -237,7 +246,8 @@
       </li>
       <br />
       <li>
-        Derive the approximation \(n! \sim \sqrt{2\pi n} \left( \frac{n}{e} \right)^n\)   (James Stirling, 1730).
+        Derive the approximation \(n! \sim \sqrt{2\pi n} \left( \frac{n}{e} 
+        \right)^n\)   (James Stirling, 1730).
       </li>
     </ol>
     <br />
